--- a/frontend-webapp/src/app/market/landing/market-landing.component.scss
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.scss
@@ -2,7 +2,7 @@
 
 .header {
   h1 {
-    font-weight: bold;
+    @include font-weight(bold);
     font-size: 1.6rem;
     margin: 0;
   }
@@ -18,32 +18,38 @@
 
 .cover-image-container {
   background: $light-gray;
+  background-size: cover;
   height: 25rem;
 }
 
-.nav-wrapper {
+nav {
   background: $white;
   z-index: 1;
   border-bottom: 1px solid $light-gray;
   position: sticky;
   top: 0;
   .nav-link {
+    display: inline-block;
     padding-top: map-get($spacers, 3);
     padding-bottom: map-get($spacers, 3);
+    margin-left: map-get($spacers, 4);
+    &:first-child {
+      margin-left: 0;
+    }
   }
 }
 
 .main-content {
   h2 {
     color: $primary;
-    font-weight: bold;
+    @include font-weight(bold);
     font-size: 1.3rem;
     margin-bottom: map-get($spacers, 4);
   }
 
   h3 {
     color: $dark-gray;
-    font-weight: bold;
+    @include font-weight(bold);
     font-size: 1.1rem;
     margin-top: map-get($spacers, 4);
     margin-bottom: map-get($spacers, 3);
@@ -70,9 +76,8 @@
     height: 15rem;
   }
 
-  .market-map-container {
-    background: $light-gray;
-    height: 40rem;
+  .market-map {
+    width: 100%;
   }
 
   .market-lessor-image {
@@ -86,7 +91,7 @@
     p {
       margin-bottom: 0.2rem;
       &.name {
-        font-weight: bold;
+        @include font-weight(bold);
       }
     }
   }
@@ -99,14 +104,14 @@
   .scene-carousel {
     .image-container {
       background: $light-gray;
-      height: 30rem;
+      height: 20rem;
       border-radius: $border-radius;
     }
     .btn {
       padding: 0;
       background: 0;
       height: 1.8rem;
-      font-weight: bold;
+      @include font-weight(bold);
       &.selected {
         background: $secondary;
         color: $white;
@@ -142,7 +147,7 @@
 
 .related-markets {
   h2 {
-    font-weight: bold;
+    @include font-weight(bold);
     font-size: 1.6rem;
     margin: 0;
   }
