--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -27,13 +27,13 @@
           <app-input-group label="เป็นองค์กรหรือไม่">
             <div appInput class="form-check">
               <label class="form-check-label">
-                <input appInput type="checkbox" (change)="toggleIsOrganization()" class="form-check-input" fornControlName="isOrganization"> เป็นองค์กร
+                <input appInput type="checkbox" class="form-check-input" formControlName="isOrganization"> เป็นองค์กร
               </label>
             </div>
           </app-input-group>
 
           <app-input-group label="ชื่อองค์กร">
-            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationName"
+            <input appInput type="text" class="form-control" formControlName="organizationName"
               placeholder="ชื่อองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationName'].hasError('required')">
               กรุณากรอกชื่อองค์กร
@@ -41,7 +41,7 @@
           </app-input-group>
 
           <app-input-group label="ชื่อติดต่อในองค์กร">
-            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationContactName"
+            <input appInput type="text" class="form-control" formControlName="organizationContactName"
               placeholder="ชื่อติดต่อในองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationContactName'].hasError('required')">
               กรุณากรอกชื่อติดต่อในองค์กร
@@ -49,7 +49,7 @@
           </app-input-group>
 
           <app-input-group label="อีเมลองค์กร">
-            <input appInput type="email" class="form-control" [disabled]="!isOrganization" formControlName="organizationEmail"
+            <input appInput type="email" class="form-control" formControlName="organizationEmail"
               placeholder="อีเมลองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationEmail'].hasError('required')">
               กรุณากรอกอีเมลในองค์กร
@@ -60,7 +60,7 @@
           </app-input-group>
 
           <app-input-group label="เบอร์โทรศัพท์องค์กร">
-            <input appInput type="text" class="form-control" [disabled]="!isOrganization" formControlName="organizationPhone"
+            <input appInput type="text" class="form-control" formControlName="organizationPhone"
               placeholder="เบอร์โทรศัพท์องค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationPhone'].hasError('required')">
               กรุณากรอกเบอร์โทรศัพท์องค์กร
