--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -25,8 +25,8 @@
 // @import '~bootstrap/scss/nav';
 // @import '~bootstrap/scss/navbar';
 @import '~bootstrap/scss/card';
-@import '~bootstrap/scss/breadcrumb';
-@import '~bootstrap/scss/pagination';
+// @import '~bootstrap/scss/breadcrumb';
+// @import '~bootstrap/scss/pagination';
 @import '~bootstrap/scss/badge';
 @import '~bootstrap/scss/jumbotron';
 // @import '~bootstrap/scss/alert';
