Add example usage of BreadcrumbComponent

--- a/frontend-webapp/src/app/market/landing/market-landing.component.html
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.html
@@ -1,3 +1,8 @@
+<app-breadcrumb>
+  <a *appBreadcrumbItem routerLink="/">ฟีดตลาด</a>
+  <span *appBreadcrumbItem>อาร์ต บอกซ์ สวนหลวง</span>
+</app-breadcrumb>
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10">
