--- a/frontend-webapp/src/app/search/search.component.html
+++ b/frontend-webapp/src/app/search/search.component.html
@@ -18,13 +18,14 @@
   </div>
 </ng-container>
 
-<div class="container mt-5 mb-5">
-  <ng-container *ngIf="(searchResult | async) as result; else noSearchQuery">
-    <div class="row" *ngIf="result.length > 0; else emptySearchResult">
-      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of result; trackBy: marketTrackByFn" @marketInOut>
+<div class="container mt-5 mb-5" *ngIf="(searchResult | async) as result">
+  <ng-container *ngIf="result.status === 'ok'; else noSearchQuery">
+    <div class="row" *ngIf="result?.markets.length > 0; else emptySearchResult">
+      <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let market of result?.markets; trackBy: marketTrackByFn" @marketInOut>
         <app-market-item [market]="market"></app-market-item>
       </div>
     </div>
+
     <ng-template #emptySearchResult>
       <div class="empty-search-result">
         <h3>ไม่พบตลาดที่ตรงตามคำค้น</h3>
@@ -42,7 +43,7 @@
   </ng-container>
 
   <ng-template #noSearchQuery>
-    <div class="no-search-query">
+    <div class="no-search-query" *ngIf="result.status === 'emptyQuery'">
       <h3>กรุณากรอกคำค้นหา</h3>
       <div class="no-result-suggestion">
         คุณสามารถค้นหาตลาดได้ง่ายๆ จากการ
