Display similar markets

--- a/frontend-webapp/src/app/market/landing/market-landing.component.html
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.html
@@ -115,7 +115,11 @@
 
     <section class="related-markets">
       <h2 class="pt-2 mb-4">คุณอาจสนใจตลาดเหล่านี้</h2>
-      <div class="market"></div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let similarMarket of (similarMarketsObs | async)">
+          <app-market-item [market]="similarMarket"></app-market-item>
+        </div>
+      </div>
     </section>
   </div>
 </ng-container>
