--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -3,19 +3,15 @@
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
       <h1 class="display-4 mt-5">ลงตลาดให้เช่า</h1>
 
-      <div *ngIf="!loadingStatus">
+      <div *ngIf="!(lessorStatus$ | async)">
         กำลังตรวจสอบข้อมูล...
       </div>
-      
-      <div *ngIf="loadingStatus === 'require_login'">
-        กรุณาเข้าระบบก่อนทำรายการ
-      </div>
 
-      <div *ngIf="loadingStatus === 'is_lessor'">
+      <div *ngIf="(lessorStatus$ | async) === 'is_lessor'">
         คุณได้สมัครเป็นผู้ให้เช่าตลาดเรียบร้อยแล้ว
       </div>
 
-      <div *ngIf="loadingStatus === 'is_not_lessor'">
+      <div *ngIf="(lessorStatus$ | async) === 'is_not_lessor'">
         <form [formGroup]="becomeLessorForm" (submit)="becomeLessor()">
           <app-input-group label="ชื่อผู้ให้เช่า">
             <input appInput type="text" class="form-control" formControlName="lessorName" placeholder="ชื่อผู้ให้เช่า">
@@ -33,24 +29,21 @@
           </app-input-group>
 
           <app-input-group label="ชื่อองค์กร">
-            <input appInput type="text" class="form-control" formControlName="organizationName"
-              placeholder="ชื่อองค์กร">
+            <input appInput type="text" class="form-control" formControlName="organizationName" placeholder="ชื่อองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationName'].hasError('required')">
               กรุณากรอกชื่อองค์กร
             </app-input-error>
           </app-input-group>
 
           <app-input-group label="ชื่อติดต่อในองค์กร">
-            <input appInput type="text" class="form-control" formControlName="organizationContactName"
-              placeholder="ชื่อติดต่อในองค์กร">
+            <input appInput type="text" class="form-control" formControlName="organizationContactName" placeholder="ชื่อติดต่อในองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationContactName'].hasError('required')">
               กรุณากรอกชื่อติดต่อในองค์กร
             </app-input-error>
           </app-input-group>
 
           <app-input-group label="อีเมลองค์กร">
-            <input appInput type="email" class="form-control" formControlName="organizationEmail"
-              placeholder="อีเมลองค์กร">
+            <input appInput type="email" class="form-control" formControlName="organizationEmail" placeholder="อีเมลองค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationEmail'].hasError('required')">
               กรุณากรอกอีเมลในองค์กร
             </app-input-error>
@@ -60,8 +53,7 @@
           </app-input-group>
 
           <app-input-group label="เบอร์โทรศัพท์องค์กร">
-            <input appInput type="text" class="form-control" formControlName="organizationPhone"
-              placeholder="เบอร์โทรศัพท์องค์กร">
+            <input appInput type="text" class="form-control" formControlName="organizationPhone" placeholder="เบอร์โทรศัพท์องค์กร">
             <app-input-error *ngIf="becomeLessorForm.controls['organizationPhone'].hasError('required')">
               กรุณากรอกเบอร์โทรศัพท์องค์กร
             </app-input-error>
