--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.scss
@@ -10,7 +10,7 @@
 
     &.active {
       color: $primary;
-      border-bottom: 4px solid $primary;
+      border-bottom: 0.2rem solid $primary;
     }
   }
 }
