--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -1,15 +1,12 @@
-<ng-container *appSubNavBar>
-  <div class="vendor-bar d-flex">
-    <div class="vendor-item active pt-3 py-2 px-1 mr-4">จัดการตลาด</div>
-    <div class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลการเงิน</div>
-    <div class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลส่วนตัว</div>
-  </div>
-</ng-container>
+<div *appSubNavBar class="vendor-bar d-flex">
+  <div class="vendor-item active pt-3 py-2 px-1 mr-4">จัดการตลาด</div>
+  <div class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลการเงิน</div>
+  <div class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลส่วนตัว</div>
+</div>
 
 <div class="container">
   <div class="mt-5 mb-3">
     <h1>โปรไฟล์ผู้เช่า</h1>
-    <div>ข้อมูลของนายอิอิ อุอุ</div>
+    <div>ข้อมูลของนายน้องหนึ่ง น้องสอง</div>
   </div>
 </div>
-
